# ledger-app

./: .gitignore  Cargo.toml
src/: main.rs  utils.rs
src/app_ui/: address.rs  menu.rs  sign_data.rs  sign_msg.rs  sign_tx.rs
src/handlers/: get_address.rs  get_public_key.rs  get_version.rs  sign_data.rs  sign_msg.rs  sign_tx.rs
tests/: conftest.py  requirements.txt  test_app_mainmenu.py  test_error_cmd.py  test_get_address_cmd.py  test_pubkey_cmd.py  test_sign_cmd.py  test_sign_data.py  test_sign_msg.py  test_sign_tx.py  test_version_cmd.py  utils.py
tests/application_client/: boilerplate_utils.py  command_sender.py  response_unpacker.py  transaction.py  utils.py
