[package]
name = "app-boilerplate-rust"
version = "1.6.3"
authors = ["yhql", "agrojean-ledger"]
edition = "2021"

[dependencies]
ledger_device_sdk = "1.20.3"
include_gif = "1.2.0"
serde = { version="1.0.192", default-features = false, features = ["derive"] }
serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core" }
hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"] }
numtoa = "0.2.4"
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
aerlp = { git = "https://github.com/ghallak/aerlp" }
num-bigint = { version = "0.4.6", default-features = false }
num-rational = { version = "0.4.2", default-features = false, features = ["num-bigint"] }
num-traits = { version = "0.2.19", default-features = false }

[profile.release]
opt-level = 'z'
lto = true

[features]
default = ["pending_review_screen"]
pending_review_screen = []

[package.metadata.ledger]
curve = ["secp256k1"]
flags = "0"
path = ["44'/1'"]
name = "Rust Boilerplate"

[package.metadata.ledger.nanox]
icon = "crab_14x14.gif"

[package.metadata.ledger.nanosplus]
icon = "crab_14x14.gif"

[package.metadata.ledger.stax]
icon = "crab_32x32.gif"

[package.metadata.ledger.flex]
icon = "crab_40x40.gif"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("stax", "flex", "nanos", "nanox", "nanosplus"))'] }
