[package]
name = "app-aeternity"
version = "1.0.0"
authors = ["Gaith Hallak"]
edition = "2021"

[dependencies]
ledger_device_sdk = "1.21.4"
include_gif = "1.2.0"
serde = { version="1.0.192", default-features = false, features = ["derive"] }
serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core" }
hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"] }
numtoa = "0.2.4"
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
primitive-types = { version = "0.13.1", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
aerlp = { git = "https://github.com/ghallak/aerlp" }

[profile.release]
opt-level = 'z'
lto = true

[features]
default = ["ledger_device_sdk/nano_nbgl"]
debug = ["ledger_device_sdk/debug"]

[package.metadata.ledger]
curve = ["secp256k1"]
flags = "0"
path = ["44'/1'"]
name = "Rust Boilerplate"

[package.metadata.ledger.nanox]
icon = "icons/ae_14x14.gif"

[package.metadata.ledger.nanosplus]
icon = "icons/ae_14x14.gif"

[package.metadata.ledger.stax]
icon = "icons/ae_32x32.gif"

[package.metadata.ledger.flex]
icon = "icons/ae_40x40.gif"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("stax", "flex", "nanos", "nanox", "nanosplus"))'] }
