[package]
name = "app-aeternity"
version = "1.0.0"
authors = ["Gaith Hallak"]
edition = "2021"

[dependencies]
ledger_device_sdk = "1.20.3"
include_gif = "1.2.0"
serde = { version="1.0.192", default-features = false, features = ["derive"] }
serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core" }
hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"] }
numtoa = "0.2.4"
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
primitive-types = { version = "0.13.1", default-features = false }
aerlp = { git = "https://github.com/ghallak/aerlp" }

[profile.release]
opt-level = 'z'
lto = true

[package.metadata.ledger]
curve = ["ed25519"]
flags = "0"
path = ["44'/457'"]
name = "aeternity"

[package.metadata.ledger.nanox]
icon = "icons/ae_14.gif"

[package.metadata.ledger.nanosplus]
icon = "icons/ae_14.gif"

[package.metadata.ledger.stax]
icon = "icons/ae_32.gif"

[package.metadata.ledger.flex]
icon = "icons/ae_40.gif"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("stax", "flex", "nanos", "nanox", "nanosplus"))'] }
